Fix spacing issues on mobile (again)

--- a/static/scss/_custom.scss
+++ b/static/scss/_custom.scss
@@ -441,6 +441,14 @@ label.error {
   margin-top: $global-margin;
 }
 
+.margin-top-1x-mobile {
+  margin-top: $global-margin;
+
+  @media screen and (min-width: 640px) {
+    margin-top: 0;
+  }
+}
+
 .margin-bottom-1x {
   margin-bottom: $global-margin;
 }
